tests/m3/hopix/typechecker/bad/case.hopix
type t = A | B

val test1 : int = A ? { A => 0 | B => 1 }

fun f (x : t (int)) : int = x ? { A => 0 | B => 1 }

val test2 : int = f (A)